--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .container{
-  border: 10px dashed gray;
+  
 }
 
 .App-header {
@@ -41,11 +41,30 @@
     transform: rotate(360deg);
   }
 }
-
+.website{
+  
+  width: 90%;
+  margin: auto;
+}
+.title{
+  width: 90%;
+  margin: auto;
+}
+.website-container{
+  
+  width:100%;
+  min-width:1000px;
+  height:auto;
+}
 h1 {
-
   text-align: center;
   font-family: copperplate;
+}
+
+.article{
+  width:100%; 
+  height: auto;
+  margin: auto;
 }
 
 /* Add a black background color to the top navigation */
@@ -107,15 +126,14 @@ h1 {
 
 .display-2{
   display: flex;
+  width: 90%;
+  margin: auto;
 }
 
 .tech-skills-container {
-  margin-top: 15px;
-  margin-left: 75px;
-  margin-right: 15px;
-  width: 770px;
   border: 2px solid rgb(199, 193, 193);
   font-size: 25px;
+  width: 60%;
   font-family: Courier;
   border-radius: 20px;
 
@@ -128,15 +146,11 @@ h1 {
 }
 
 .professional-skills-container{
-  margin-top: 15px;
-  margin-right: 75px;
-  margin-left: 15px;
-  width: 770px;
   border: 2px solid rgb(199, 193, 193);
   font-size: 25px;
   font-family: Courier;
   border-radius: 20px;
-
+  margin-left: 20px;
 }
 
 .professional-skills-text{
@@ -144,15 +158,13 @@ font-size: 20px;
 }
 
 .project-container{
-  align-content: center;
-  justify-content: center;
-  margin-top: 15px;
-  margin-left: 75px;
-  margin-right: 75px;
   border: 2px solid rgb(199, 193, 193);
   color: black;
   font-size: 30px;
   border-radius: 20px;
+  width:100%; 
+  height: auto;
+  margin: auto;
 }
 
 .project-title{
@@ -161,13 +173,16 @@ font-size: 20px;
 }
 
 .obstacle-avoiding-robot-container{
-  width: 400px;
-  margin-left: 20px;
+  margin: auto;
 }
 
 .project-image{
-  border:  grey;
   display: flex;
+  margin: auto;
+
+  width: fit-content;
+  height: auto;
+  
 }
 
 .project-text{
@@ -177,18 +192,18 @@ font-size: 20px;
 }
 
 .Magic-Mirror-Containter{
-  width: 400px;
-  margin-left: 30px;
+  
+  margin: auto;
 
 }
 .project-container-alignment{
   display: flex;
-  margin-right: 75px;
+  
+  width: 100%;
   
 }
 .Connect-4-container{
-  width: 400px;
-  margin-left: 30px;
+  margin: auto;
 }
 
 .footer{
@@ -196,20 +211,28 @@ font-size: 20px;
   border: 2px solid black;
   background-color: rgb(24, 28, 34);
   font-size: 15px;
+  min-width:100%;
+  max-width:100%;
+  
+  height:auto;
   color: white;
 }
 
 .self_image_container{
   color: white;
-  width: 800px;  
+  margin: auto;
+  width: 100%;
+  height: auto;
 }
 
 .tech_image_container{
-  display: flex;
-  margin-left: 100px;
+  color: white;
+  margin: auto;
+  width: 100%;
+  max-width: fit-content;
+  height: auto;
   opacity: 70%;
-  border-radius: 50%;
-  overflow: "hidden"
+
 }
 
 .show_more_button{
@@ -250,9 +273,12 @@ font-size: 20px;
 }
 
 .contact{
-  margin-left: 300px;
-  width: 1000px;  
-  border: 2px solid gray;
+  width:90%; 
+  height: auto;
+  margin: auto;
+  
+
+
 }
 
 .info{
@@ -262,6 +288,8 @@ font-size: 20px;
 
 .contact-me{
   text-align: left;
+  
+  margin: auto;
 }
 
 .contact-me hr{
@@ -308,13 +336,12 @@ font-size: 20px;
 }
 
 .blog-post{
-  width: 1200px;
-  margin-top: 10px;
-  margin-left: 80px;
+  margin: auto;
+  width: 90%;
+  height: auto;
 }
 
 .blog-post .title{
-  text-align: left;
   font-family: copperplate;
   font-size: 20px;
 }
@@ -327,4 +354,13 @@ font-size: 20px;
 .blog-post .blog-text .text{
   text-align: left;
   line-height: 2;
+}
+
+.blog-post .text{  
+  margin: auto;
+  width: 80%;
+  line-height: 2;
+}
+.text div{
+  text-align: center;
 }
