--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -162,7 +162,7 @@ font-size: 20px;
   color: black;
   font-size: 30px;
   border-radius: 20px;
-  width:100%; 
+  width:fit-content; 
   height: auto;
   margin: auto;
 }
@@ -177,13 +177,16 @@ font-size: 20px;
 }
 
 .project-image{
-  display: flex;
-  margin: auto;
-
-  width: fit-content;
-  height: auto;
-  
+  width: 350px;  
 }
+
+.project-image img{
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;  
+  display: block;
+}
+
 
 .project-text{
   font-size: 15px;
@@ -198,8 +201,6 @@ font-size: 20px;
 }
 .project-container-alignment{
   display: flex;
-  
-  width: 100%;
   
 }
 .Connect-4-container{
@@ -226,11 +227,13 @@ font-size: 20px;
 }
 
 .tech_image_container{
-  color: white;
+  width: fit-content;
+}
+.tech_image_container img{
   margin: auto;
-  width: 100%;
-  max-width: fit-content;
-  height: auto;
+  max-width: 100%;
+  max-height: 100%;  
+  display: block;
   opacity: 70%;
 
 }
